k8s/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankops-backend-svc
  namespace: bankops
  labels:
    app.kubernetes.io/name: bankops-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bankops-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankops-ingress
  namespace: bankops
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: bankops.internal.bank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bankops-backend-svc
                port:
                  number: 8000
